--- a/Web/scheduling/web/paibanbiao_renyuan.html
+++ b/Web/scheduling/web/paibanbiao_renyuan.html
@@ -72,7 +72,7 @@
                                     <!--<el-input v-model="props.row.department_name" style="width: 220px"></el-input>-->
                                 </el-form-item>
                                 <el-form-item label="班次" prop="banci">
-                                    <el-input v-model="props.row.banci" style="width: 220px"></el-input>
+                                    <el-input v-model="props.row.banci" style="width: 220px" placeholder="此班次只作为记录"></el-input>
                                 </el-form-item>
                             </el-form>
                             <el-button 
@@ -159,7 +159,7 @@
                     </el-select>               
                 </el-form-item>
                 <el-form-item label="班次" prop="banci">
-                    <el-input v-model="paibanbiao_renyuan.banci" style="width: 300px"></el-input>
+                    <el-input v-model="paibanbiao_renyuan.banci" style="width: 300px" placeholder="此班次只作为记录"></el-input>
                 </el-form-item>
             </el-form>
             <el-button 
