--- a/Web/scheduling/web/zhuye.html
+++ b/Web/scheduling/web/zhuye.html
@@ -9,9 +9,15 @@
             background-size:cover;
         }
     </style>
+    <script>
+        function threeFn() {
+            window.open("https://www.baidu.com")
+        }
+    </script>
 </head>
 <body>
-    <p>当前系统版本：3.01.0</p>
+    <p>当前系统版本：3.01.0 </p>
+    <p onclick="threeFn()">系统使用视频</p>
     <div style="text-align:center;height:100%;display: flex;flex-direction: column;justify-content: center;align-items: center">
         <div style="font-size:40px;margin: 0 auto;color:black;margin-top:20%">欢迎使用！</div>
         <div style="font-size:40px;margin: 0 auto;color:black;">云和排产管理系统</div>
