--- a/Web/scheduling/web/department_new.html
+++ b/Web/scheduling/web/department_new.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+    <script src="../../finance/web/assets/js/Jquery.js"></script>
     <link href="static/element/index.css" rel="stylesheet" />
     <link rel="stylesheet" href="static/css/main.css">
 
@@ -15,8 +15,78 @@
     <script src="static/js/main.js"></script>
 
     <title>云合排产管理系统</title>
+    <script>
+        function watchVideo() {
+            $(".videoCanvas").show();
+            $(".video-mask").show();
+        }
+
+        $("#video-shut").click(function () {
+            $("#video").trigger("pause");
+            $(".videoCanvas").hide();
+            $(".video-mask").hide();
+        })
+
+        $('.videoCanvas').mouseover(function (event) {
+            $('.video-shut').show();
+        })
+
+        $('.videoCanvas').mouseout(function (event) {
+            $('.video-shut').hide();
+        })
+
+        function close_video() {
+
+            $("#video").trigger("pause");
+            $(".videoCanvas").hide();
+            $(".video-mask").hide();
+        }
+    </script>
+    <style>
+        /* 视频播放 */
+        .video-mask {
+          position: fixed;
+          z-index: 9999;
+          background: rgba(33, 33, 33, .8);
+          top: 0;
+          width: 100%;
+          height: 100%;
+          display: none;
+        }
+
+        .videoCanvas {
+          position: fixed;
+          z-index: 10000;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          display: none;
+        }
+
+        .video-shut {
+          position: absolute;
+          height: 32px;
+          width: 32px;
+          margin: 10px 10px 0 0;
+          right: 0px;
+          text-align: center;
+          display: block;
+          z-index: 9999;
+          cursor: pointer;
+          /*display: none;*/
+        }
+    </style>
 </head>
 <body>
+    <!-- 视频 -->
+    <div class="video-mask" id="video-mask"></div>
+    <div class="videoCanvas" id="videoCanvas" style="display: none;">
+    <span class="video-shut" id="video-shut" onclick="close_video()">
+        <img src="static/img/close.png" style="width: 28px; height: 28px;" >
+    </span>
+        <video id="video" controls autoplay="autoplay" src="static/video/部门.mp4" width="700" height="400"></video>
+    </div>
+
   <div id="department" style="display: none;" :style="{display: 'block'}">
         <el-container>
             <el-main>
@@ -28,10 +98,11 @@
                         <el-input v-model="view_name" placeholder="页面名称" clearable></el-input>
                     </el-col>
                     <el-col :span="8">
-                        <el-button-group>
+                        <el-button-group style="width:600px">
                             <el-button icon="el-icon-search" type="primary" :disabled="loading" @click="getList">查询</el-button>
                             <el-button icon="el-icon-refresh" type="primary" :disabled="loading" @click="getList">刷新</el-button>
                             <el-button icon="el-icon-circle-plus-outline" type="primary" @click="deptVisible = true">添加</el-button>
+                            <el-button icon="el-icon-video-camera" type="primary" onclick="watchVideo()"></el-button>
                         </el-button-group>
                     </el-col>
                 </el-row>
