--- a/Web/scheduling/web/order.html
+++ b/Web/scheduling/web/order.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
+    <script src="../../finance/web/assets/js/Jquery.js"></script>
     <link rel="stylesheet" type="text/css" href="../assets/css/chart.css"/>
     <link href="static/element/index.css" rel="stylesheet" />
     <link rel="stylesheet" href="static/css/main.css">
@@ -24,8 +24,78 @@
         }
     </style>
     <title>云合排产管理系统</title>
+    <script>
+        function watchVideo() {
+            $(".videoCanvas").show();
+            $(".video-mask").show();
+        }
+
+        $("#video-shut").click(function () {
+            $("#video").trigger("pause");
+            $(".videoCanvas").hide();
+            $(".video-mask").hide();
+        })
+
+        $('.videoCanvas').mouseover(function (event) {
+            $('.video-shut').show();
+        })
+
+        $('.videoCanvas').mouseout(function (event) {
+            $('.video-shut').hide();
+        })
+
+        function close_video() {
+
+            $("#video").trigger("pause");
+            $(".videoCanvas").hide();
+            $(".video-mask").hide();
+        }
+    </script>
+    <style>
+        /* 视频播放 */
+        .video-mask {
+          position: fixed;
+          z-index: 9999;
+          background: rgba(33, 33, 33, .8);
+          top: 0;
+          width: 100%;
+          height: 100%;
+          display: none;
+        }
+
+        .videoCanvas {
+          position: fixed;
+          z-index: 10000;
+          left: 50%;
+          top: 50%;
+          transform: translate(-50%, -50%);
+          display: none;
+        }
+
+        .video-shut {
+          position: absolute;
+          height: 32px;
+          width: 32px;
+          margin: 10px 10px 0 0;
+          right: 0px;
+          text-align: center;
+          display: block;
+          z-index: 9999;
+          cursor: pointer;
+          /*display: none;*/
+        }
+    </style>
 </head>
 <body>
+    <!-- 视频 -->
+    <div class="video-mask" id="video-mask"></div>
+    <div class="videoCanvas" id="videoCanvas" style="display: none;">
+    <span class="video-shut" id="video-shut" onclick="close_video()">
+        <img src="static/img/close.png" style="width: 28px; height: 28px;" >
+    </span>
+        <video id="video" controls autoplay="autoplay" src="static/video/订单.mp4" width="700" height="400"></video>
+    </div>
+
     <div id="order" style="display: none;" :style="{display: 'block'}">
         <el-container>
             <el-main>
@@ -43,6 +113,7 @@
                             <el-button icon="el-icon-circle-plus-outline" type="primary" @click="addVisible = true"></el-button>
                             <el-button  icon="el-icon-printer" type="primary" @click="toExcel">导出</el-button>
                             <el-button icon="el-icon-s-marketing"  type="primary"  @click="chartVisible=true;">图表</el-button>
+                            <el-button icon="el-icon-video-camera" type="primary" onclick="watchVideo()"></el-button>
                         </el-button-group>
                     </el-col>
                 </el-row>
@@ -169,11 +240,11 @@
         >
             <el-form 
                 ref="chartForm"
-                style="background: url('static/img/image4.jpeg') no-repeat center!important;background-size:100% 100%"
+                style="background: url('static/img/tubiao.jpg') no-repeat center!important;background-size:100% 100%"
             >
                 <!--style="background: url('static/img/image4.jpeg') no-repeat center!important;background-size:100% 100%"-->
                 <!--style="background: url('static/img/image3.jpeg') no-repeat center!important;background-size:100% 100%"-->
-                <el-form-item label="年" prop="year">
+                <el-form-item label="年" prop="year" style="margin-left:2%">
                     <el-input v-model="year" type="number" style="width: 230px;"></el-input>
                 </el-form-item>
                 <el-form-item>
@@ -185,7 +256,7 @@
                             @click="getChart">生成</el-button>
                     </el-button-grou>
                 </el-form-item>
-                <chart :options="orgOptions" :auto-resize="true" ></chart>
+                <chart :options="orgOptions" :auto-resize="true" style="margin-left:2%"></chart>
             </el-form>
         </el-drawer>
     </div>
@@ -251,7 +322,7 @@
                     title: {
                         text: "排产折线图",
                         textStyle: {
-                            color: '#FFFFFF', //颜色
+                            color: '#333333', //颜色
                             fontStyle: 'normal', //风格
                             fontWeight: 'normal', //粗细
                             fontFamily: 'Microsoft yahei', //字体
@@ -269,29 +340,29 @@
                     xAxis: {
                         nameTextStyle: {
                             fontSize: 15,
-                            color: '#FFFFFF', //颜色
+                            color: '#333333', //颜色
                         },
                         name: '月份',
                         type: 'category',
                         data: [],
                         axisLine: {
                             lineStyle: {
-                                color: '#FFFFFF',
-                                width: 4,//这里是为了突出显示加上的
+                                color: '#333333',
+                                width: 2,//这里是为了突出显示加上的
                             }
                         },
                     },
                     yAxis: {
                         nameTextStyle: {
                             fontSize: 15,
-                            color: '#FFFFFF', //颜色
+                            color: '#333333', //颜色
                         },
                         name: '数量',
                         type: 'value',
                         axisLine: {
                             lineStyle: {
-                                color: '#FFFFFF',
-                                width: 4,//这里是为了突出显示加上的
+                                color: '#333333',
+                                width: 2,//这里是为了突出显示加上的
                             }
                         },
                     },
@@ -305,7 +376,7 @@
                             normal: {
                                 color: "#5078DB",//折线点的颜色
                                 lineStyle: {
-                                    color: "#F4422C"//折线的颜色
+                                    color: "#009900"//折线的颜色
                                 }
                             }
                         },
