--- a/Web/scheduling/web/order.html
+++ b/Web/scheduling/web/order.html
@@ -240,11 +240,13 @@
         >
             <el-form 
                 ref="chartForm"
-                style="background: url('static/img/tubiao.jpg') no-repeat center!important;background-size:100% 100%"
+
+                style="background: url('static/img/psd34631(1).jpg') no-repeat center!important;background-size:100% 100%"
             >
+                <!-- style="background: url('static/img/tubiao.jpg') no-repeat center!important;background-size:100% 100%" -->
                 <!--style="background: url('static/img/image4.jpeg') no-repeat center!important;background-size:100% 100%"-->
                 <!--style="background: url('static/img/image3.jpeg') no-repeat center!important;background-size:100% 100%"-->
-                <el-form-item label="年" prop="year" style="margin-left:2%">
+                <el-form-item label="年" prop="year" style="margin-left:2%;color:white;">
                     <el-input v-model="year" type="number" style="width: 230px;"></el-input>
                 </el-form-item>
                 <el-form-item>
@@ -322,7 +324,7 @@
                     title: {
                         text: "排产折线图",
                         textStyle: {
-                            color: '#333333', //颜色
+                            color: '#FFFFFF', //颜色
                             fontStyle: 'normal', //风格
                             fontWeight: 'normal', //粗细
                             fontFamily: 'Microsoft yahei', //字体
@@ -340,14 +342,14 @@
                     xAxis: {
                         nameTextStyle: {
                             fontSize: 15,
-                            color: '#333333', //颜色
+                            color: '#FFFFFF', //颜色
                         },
                         name: '月份',
                         type: 'category',
                         data: [],
                         axisLine: {
                             lineStyle: {
-                                color: '#333333',
+                                color: '#FFFFFF',
                                 width: 2,//这里是为了突出显示加上的
                             }
                         },
@@ -355,13 +357,13 @@
                     yAxis: {
                         nameTextStyle: {
                             fontSize: 15,
-                            color: '#333333', //颜色
+                            color: '#FFFFFF', //颜色
                         },
                         name: '数量',
                         type: 'value',
                         axisLine: {
                             lineStyle: {
-                                color: '#333333',
+                                color: '#FFFFFF',
                                 width: 2,//这里是为了突出显示加上的
                             }
                         },
@@ -374,9 +376,9 @@
                         data: [],
                         itemStyle: {
                             normal: {
-                                color: "#5078DB",//折线点的颜色
+                                color: "#FFFFFF",//折线点的颜色 5078DB
                                 lineStyle: {
-                                    color: "#009900"//折线的颜色
+                                    color: "#FFFFFF"//折线的颜色 009900
                                 }
                             }
                         },
