--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -20,7 +20,7 @@
 
     <style>
         .labelStyle .el-form-item__label {
-            color:#333333;
+            color:#FFFFFF;
         }
         /*.inputStyle .el-input {
             background:	#1E90FF;
@@ -396,11 +396,14 @@
             <el-form 
                 :model="work"
                 ref="chartForm"
-                style="background: url('static/img/tubiao.jpg') no-repeat center!important;background-size:100% 100%"
+                style="background: url('static/img/psd34631(1).jpg') no-repeat center!important;background-size:100% 100%"
             >
+                <!-- style="background: url('static/img/psd34631(1).jpg') no-repeat center!important;background-size:100% 100%" -->
+                <!-- style="background-color:black; no-repeat center!important;background-size:100% 100%" -->
+                <!-- style="background: url('static/img/psd34631(1).jpg') no-repeat center!important;background-size:100% 100%" -->
                 <!--style="background: url('static/img/image4.jpeg') no-repeat center!important;background-size:100% 100%"-->
                 <!--style="background: url('static/img/image3.jpeg') no-repeat center!important;background-size:100% 100%"-->
-                
+                <!--  -->
                 <el-form-item label="选择开始日期：" class="labelStyle" style="margin-left:2%">
                     <el-date-picker 
                         style="width:150px"
@@ -589,7 +592,7 @@
                     title: {
                         text: "排产折线图",
                         textStyle:{
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                             fontStyle:'normal', //风格
                             fontWeight:'normal', //粗细
                             fontFamily:'Microsoft yahei', //字体
@@ -607,14 +610,14 @@
                     xAxis: {
                         nameTextStyle: {
                             fontSize:15,
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                         },
                         name: '日期',
                         type: 'category',
                         data: [],
                         axisLine:{
                             lineStyle:{
-                                color:'#333333',
+                                color:'#FFFFFF',
                                 width:2,//这里是为了突出显示加上的
                             }
                         },
@@ -622,13 +625,13 @@
                     yAxis: {
                         nameTextStyle: {
                             fontSize:15,
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                         },
                         name: '数量',
                         type: 'value',
                         axisLine:{
                             lineStyle:{
-                                color:'#333333',
+                                color:'#FFFFFF',
                                 width:2,//这里是为了突出显示加上的
                             }
                         },
@@ -641,9 +644,9 @@
                         data: [],
                         itemStyle: {
                             normal: {
-                                color: "#5078DB",//折线点的颜色
+                                color: "#FFFFFF",//折线点的颜色 #5078DB
                                 lineStyle: {
-                                    color: "#009900"//折线的颜色
+                                    color: "#FFFFFF"//折线的颜色 009900
                                 }
                             }
                         },
@@ -658,7 +661,7 @@
                     title: {
                         text: "排产柱状图",
                         textStyle:{
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                             fontStyle:'normal', //风格
                             fontWeight:'normal', //粗细
                             fontFamily:'Microsoft yahei', //字体
@@ -675,14 +678,14 @@
                     xAxis: {
                         nameTextStyle: {
                             fontSize:15,
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                         },
                         name: '日期',
                         type: 'category',
                         data: [],
                         axisLine:{
                             lineStyle:{
-                                color:'#333333',
+                                color:'#FFFFFF',
                                 width:2,//这里是为了突出显示加上的
                             }
                         },
@@ -691,11 +694,11 @@
                     yAxis: {
                         nameTextStyle: {
                             fontSize:15,
-                            color:'#333333', //颜色
+                            color:'#FFFFFF', //颜色
                         },
                         axisLine:{
                             lineStyle:{
-                                color:'#333333',
+                                color:'#FFFFFF',
                                 width:2,//这里是为了突出显示加上的
                             }
                         },
@@ -707,7 +710,7 @@
                         data: [],
                         itemStyle: {
                             normal: {
-                                color: "#6699FF",//折线点的颜色
+                                color: "#FFFFFF",//折线点的颜色 6699FF
                                 
                             }
                         },
