--- a/Web/scheduling/web/summary.html
+++ b/Web/scheduling/web/summary.html
@@ -84,7 +84,7 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls autoplay="autoplay" src="static/video/汇总.mp4" width="700" height="400"></video>
+        <video id="video" controls src="static/video/汇总.mp4" width="700" height="400"></video>
     </div>
 
     <div id="summary" style="display: none;" :style="{display: 'block'}">
