--- a/Web/scheduling/web/work.html
+++ b/Web/scheduling/web/work.html
@@ -107,7 +107,7 @@
     <span class="video-shut" id="video-shut" onclick="close_video()">
         <img src="static/img/close.png" style="width: 28px; height: 28px;" >
     </span>
-        <video id="video" controls autoplay="autoplay" src="static/video/排产.mp4" width="700" height="400"></video>
+        <video id="video" controls src="static/video/排产.mp4" width="700" height="400"></video>
     </div>
 
     <input type="text" hidden="hidden" id="type" value="排产1" />
